# TermNest

./: README.md  README_NEW.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: multi-session-features.md  password-authentication.md  password-testing.md  status-dot-fix.md  themes.md
example-themes/: README.md  custom-theme-template.json  forest-green.json  sunset-orange.json
src/: App.vue  App_new.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  ssh.rs  ssh_new.rs
src-tauri/src/ssh/: client.rs  keys.rs  mod.rs  session.rs  sftp.rs  terminal.rs
src/components/: ContextMenu.vue  CreateSessionModal.vue  PasswordDialog.vue  QuickActionsMenu.vue  SessionCard.vue  SessionManager.vue  SettingsModal.vue  StatusBar.vue  TabsContainer.vue  Terminal.vue
src/stores/: sessions.ts  settings.ts  themes.ts
src/themes/: README.md  builtinThemes.ts  types.ts
