[package]
name = "termnest"
version = "0.1.3"
description = "A Cross-Platform Terminal Client"
authors = ["XaviFortes"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "termnest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
ssh2 = {version = "0.9.5", features = ["vendored-openssl", "openssl-on-win32"] }
libssh2-sys = "0.3.1"
portable-pty = "0.8"
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"
bytes = "1.10"

